# sistemas_distribuidos_20212

./: .gitignore  README.md
openmp_laura/: Proyecto_video.c  record_video.cpp
openmp_oscar/: CMakeLists.txt  main.cpp
secuencial/: README.md  decorators.py  main.py  process1.py  process2.py  requirements.txt
